--- a/rethinkdb.conf.tmpl
+++ b/rethinkdb.conf.tmpl
@@ -19,6 +19,7 @@
 # rungroup=rethinkdb
 
 ## Stash the pid in this file when the process is running
+## Note for systemd users: Systemd uses its own internal mechanism. Do not set this parameter.
 ## Command line default: none
 ## Init script default: /var/run/rethinkdb/<name>/pid_file (where <name> is the name of this config file without the extension)
 # pid-file=/var/run/rethinkdb/rethinkdb.pid
@@ -32,7 +33,7 @@ directory=/data
 
 ## Log file options
 ## Default: <directory>/log_file
-# log-file=/var/log/rethinkdb
+log-file=/var/logs/rethinkdb/rethinkdb
 
 ### Network options
 
@@ -43,24 +44,24 @@ bind=all
 
 ## Address that other rethinkdb instances will use to connect to this server.
 ## It can be specified multiple times
-# canonical-address=
+canonical-address={{getenv "CANONICAL_ADDRESS"}}
 
 ## The port for rethinkdb protocol for client drivers
 ## Default: 28015 + port-offset
-# driver-port=28015
+driver-port=28015
 
 ## The port for receiving connections from other nodes
 ## Default: 29015 + port-offset
-# cluster-port=29015
+cluster-port=29015
 
 ## The host:port of a node that rethinkdb will connect to
 ## This option can be specified multiple times.
 ## Default: none
-# join=example.com:29015
+join={{getenv "JOIN_HOST"}}:29015
 
 ## All ports used locally will have this value added
 ## Default: 0
-# port-offset=0
+port-offset=0
 
 ## r.http(...) queries will use the given server as a web proxy
 ## Default: no proxy
@@ -70,7 +71,7 @@ bind=all
 
 ## Port for the http admin console
 ## Default: 8080 + port-offset
-# http-port=8080
+http-port=8080
 
 ## Disable web administration console
 # no-http-admin
@@ -85,7 +86,7 @@ bind=all
 
 ## Size of the cache in MB
 ## Default: Half of the available RAM on startup
-# cache-size=1024
+cache-size={{getenv "CACHE_SIZE"}}
 
 ### Disk
 
@@ -99,5 +100,4 @@ bind=all
 
 ## The name for this server (as will appear in the metadata).
 ## If not specified, it will be randomly chosen from a short list of names.
-# server-name=server1
-
+server-name={{getenv "SERVER_NAME"}}
